# crank-convert

./: Cargo.toml  LICENSE.txt  README.md
programs/convert-proc/: Cargo.toml
programs/convert-proc/src/: conversions.rs  convertable_derive.rs  lib.rs  simple_data.rs  utils.rs
programs/crank-convert/: Cargo.toml  build.rs
programs/crank-convert/src/: conversion.rs  convertable.rs  data_holder.rs  errors.rs  file_data.rs  lib.rs  macros.rs  opts.rs
programs/crank-convert/src/conversions/: conversion.rs  conversion_path.rs  conversions.rs  convertable.rs  execute_conversion.rs  mod.rs
programs/crank-convert/src/conversions/basic/: identity.rs
programs/crank-convert/src/conversions/common/: mod.rs  simple_convertable.rs  simple_copy.rs
programs/crank-convert/src/conversions/documents/: html.rs  mod.rs  rtf.rs  txt.rs
programs/crank-convert/src/conversions/json/: json_to_csv.rs  json_utils.rs  mod.rs
programs/crank-convert/src/data_formats/: data_format.rs  mod.rs
programs/crank-convert/src/data_formats/archive/: archive.rs  mod.rs
programs/crank-convert/src/data_formats/executable/: executable.rs  mod.rs
programs/crank-convert/src/data_formats/structured/: json.rs  mod.rs  structured.rs
programs/crank-convert/src/file_types/: crank_file.rs  crank_file_type.rs  file_type.rs  mod.rs
programs/crank-convert/src/file_types/document/: html.rs  mod.rs  rtf.rs  text.rs  txt.rs
programs/crank-convert/src/formats/: data_format.rs  data_holder.rs  mod.rs  simple_data.rs  simple_data_format.rs
programs/crank-convert/src/interface/: conf.rs  mod.rs  shelf.rs  type_names.rs
programs/crank-convert/src/utils/: debug.rs  holder_utils.rs  mod.rs  typing.rs
programs/crank-convert/tests/: basic_conversion_test.rs  test_basic_conversion.rs  test_macros.rs  utils.rs
programs/crank-convert/tests/test_files/: basic_test.txt
(+4 files in other folders)
