[package]
name = "convert-proc"
version = "0.1.0"
edition = "2021"


[features]
default = ["debug"]
debug = []

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0", features=["full", "extra-traits"] }
quote = "1.0"
darling = "0.13"
lazy_static = "1.4.0"
phf_codegen = "0.10.0"
proc-macro2 = "1.0"