[package]
name = "crank-convert"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["native"]
# The "native" trait defines whether to use multithreading and std::Fs. Leave it off for webassembly
native = []

[dependencies]
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
phf = { version = "0.10", features = ["macros"] }
thiserror = "1.0"
simple_logger = "2.1"
log = "0.4"

[build-dependencies]
proc-macro2 = "1.0"
walkdir = "2"