[package]
name = "crank-convert"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
# The "native" trait defines whether to use multithreading and std::Fs. Leave it off for webassembly
native = []

[dependencies]
convert-proc = { path = "../convert-proc" }
conversion-types = { git = "https://github.com/FileCrank/conversion-types" }

lazy_static = "1.4.0"
thiserror = "1.0.31"
serde = "1.0"
serde_json = "1.0"
csv = "1.1"